Réussi à fixer le bug propagé dans méthode emprunter(). Bug: Chaque fois que l'emprunteur emprunté un document, un nouveau enregistrement était inséré dans le table Document, contenant le même information.